# telegram_forwarder

./: .env.example  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4ef5e8095d88_fix_relation.py  791e3ab7e02c_relation_user_and_setting.py  add650873566_init_commit.py
app/adapters/bot/: __init__.py  bot_factory.py
app/adapters/bot/handlers/: __init__.py  echo.py
app/adapters/database/: __init__.py
app/adapters/database/mappers/: base_mapper.py  channel_mapper.py  setting_mapper.py  user_mapper.py
app/adapters/database/models/: __init__.py  channel_model.py  setting_model.py  user_model.py
app/adapters/database/repositories/: channel_repo.py
app/adapters/redis/: redis_factory.py
app/adapters/user_bot/: user_bot_factory.py
app/core/: __init__.py  config.py  db.py  dependencies.py  logger.py
app/domain/entities/: base.py  channel.py  user.py  user_settings.py
app/domain/interfaces/repositories/: base_repo.py  channel_repo.py  user_repo.py
app/domain/repositories_interfaces/: base_repo.py  channel_repo.py  user_repo.py
app/interfaces/: __init__.py
app/interfaces/bot/: bot_factory.py  main.py
app/interfaces/bot/handlers/: __init__.py
app/interfaces/redis/: __init__.py
app/interfaces/storage/mappers/: base_mapper.py  channel_mapper.py  setting_mapper.py  user_mapper.py
app/interfaces/storage/models/: __init__.py  channel_model.py  setting_model.py  user_model.py
app/interfaces/storage/repos/: base_repo.py  channel_repo.py
